
2007-08-18  Struan Robertson

	* src/ReactionManager.cpp:  Added material related to association 
        reactions together with some minor changes relating to dissociation 
        reactions.

        * Windows VC8/Mesmer/pentyl_isomerization.xml: Updated the pentyl
        isomerization input file to include dissociation reactions.

2007-08-08  Chris Morley

	Add the error handling files oberror.h and oberror.cpp. These are
	slightly modified OpenBabel files. Not yet used in Mesmer code.

2007-07-28  Chris Morley

	Various xml, xsl, etc file. Display of output file has energy level
	diagram  and collapsable data sections.
	
2007-07-28  Chris Morley
	
	* src/MicroRate.cpp, .h, src/SimpleILTx.cpp, src/SimpleRRKMx.cpp:
	Mod of MicroRateCalulator classes to be plugin classes and to keep 
	all their data in the Reaction class.
	
	* src/Molecule.h, .cpp: Remove diagCollisionOperator which is also
	in ReactionManager
	
	* Persistence.h, XMLPersist.h,.cpp:Add ReadBoolean() and WriteAttribute
	methods. Activate Read() and modify WriteMainElement(). More flexibilty
	found to be necessary.
	
	* src.System.h,.cpp:Add ReadRange() method and use it for T, P and conc.
	Not yet used properly in calculation.

2007-07-21  Struan Robertson

        * src/MicroRateCalculator.cpp/.h: Separated micro-rate calcuator base
        class into separate file and added test method to this class.

        * src/SimpleILT.cpp/.h: Added implementation of simple dissociation ILT 
        method.

2007-07-09  Struan Robertson

        * src/Reaction.cpp/.h: Separated micro-rate calcuation code into
        calculator classes.

        * src/SimpleRRKM.cpp/.h and SimpleILT.ccp/.h calculator classes added to
        calculate micro. rate coeffs. via RKKM and ILT respectively.

2007-06-12  Struan Robertson

        * src/Reaction.cpp/.h: Isomer reaction terms reviewed and simplified,
        unnecessary methods and variables removed.

2007-06-10  Struan Robertson
